<resources>
    <string name="app_name">KarGO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="home_fragment">CTRL + ALT + DELETE</string>
    <string name="registration_title">CREATE ACCOUNT</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="registration_fragment">Registration Fragment</string>
    <string name="technical_summative_2">Technical Summative 2</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_notify">Send Notification</string>

    <string name="alex_nicolas">Alex Nicolas</string>

    <string name="etEmail">Email</string>
    <string name="etEmailHint">....</string>
    <string name="etFullName">Full Name</string>
    <string name="etFullNameHint">....</string>
    <string name="etPassword">Password</string>
    <string name="etPasswordHint">....</string>
    <string name="etConfirmPassword">Confirm Password</string>
    <string name="etConfirmPasswordHint">....</string>
    <string name="btRegister">Register</string>

    <string name="action_dark_theme">Dark Mode</string>
    <string name="action_light_theme">Light Mode</string>
    <string name="action_exit">Exit</string>

    <string name="desc1">I\'m a subhead</string>
    <string name="desc2">I\'m a supporting text. Very Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Activity Login Page -->

    <string name="LoginHeaderText">Welcome back Admin!</string>
    <string name="LoginDescText">Please enter your details to Log In!</string>
    <string name="btLogin">Login</string>
    <string name="etEmailLogin">Email</string>
    <string name="etPasswordLogin">Password</string>
    <string name="GoBackToUserLogin">Are you not an Admin?</string>

    <string name="UserLoginHeaderText">Welcome back User!</string>
    <string name="TvRegisterPage">Don\'t have an account yet?</string>

    <string name="GoToAdminLogin">Are you an Admin?</string>
    <string name="RegisterDescText">Please fill out the details to register!</string>

</resources>