<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_notify"
        android:title="@string/action_notify"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_theme"
        android:title="@string/action_dark_theme"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>