<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

  <TextView
      android:id="@+id/txtLoginSub4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="5dp"
      android:background="#FCEBCD"
      android:fontFamily="sans-serif-condensed-medium"
      android:text="@string/RegisterDescText"
      android:textColor="@color/LoginColor"
      android:textSize="18sp"
      android:textStyle="normal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider5" />

  <View
      android:id="@+id/divider5"
      android:layout_width="310dp"
      android:layout_height="1dp"
      android:layout_marginTop="10dp"
      android:background="@color/primaryBrown"
      android:backgroundTint="#000000"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtHome" />

  <ImageView
      android:id="@+id/imageView11"
      android:layout_width="416dp"
      android:layout_height="238dp"
      android:layout_marginTop="60dp"
      android:layout_marginEnd="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvRegisterPage5"
      app:srcCompat="@drawable/swoosh" />

  <TextView
      android:id="@+id/tvRegisterPage5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/GoToAdminLogin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btRegister"
      android:clickable="true"
      android:focusable="true"
      android:textColor="@color/primaryBrown"
      android:textStyle="bold"/>

  <EditText
      android:id="@+id/etPassword"
      android:layout_width="312dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:autofillHints="password"
      android:background="@drawable/edittext_background"
      android:ems="10"
      android:fontFamily="@font/acme"
      android:hint="@string/etPasswordHint"
      android:inputType="textPassword"
      android:minHeight="52dp"
      android:paddingHorizontal="16dp"
      android:paddingVertical="10dp"
      android:textColor="@color/textPrimary"
      android:textColorHint="@color/textSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

  <EditText
      android:id="@+id/etConfirmPassword"
      android:layout_width="312dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:autofillHints="password"
      android:background="@drawable/edittext_background"
      android:ems="10"
      android:fontFamily="@font/acme"
      android:hint="@string/etConfirmPasswordHint"
      android:inputType="textPassword"
      android:minHeight="52dp"
      android:paddingHorizontal="16dp"
      android:paddingVertical="10dp"
      android:textColor="@color/textPrimary"
      android:textColorHint="@color/textSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword" />

  <EditText
      android:id="@+id/etFullName"
      android:layout_width="312dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:autofillHints="full name"
      android:background="@drawable/edittext_background"
      android:ems="10"
      android:fontFamily="@font/acme"
      android:hint="@string/etFullNameHint"
      android:inputType="text"
      android:minHeight="52dp"
      android:paddingHorizontal="16dp"
      android:paddingVertical="10dp"
      android:textColor="@color/textPrimary"
      android:textColorHint="@color/textSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvFullName" />

  <EditText
      android:id="@+id/etEmail"
      android:layout_width="312dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:autofillHints="emailAddress"
      android:background="@drawable/edittext_background"
      android:ems="10"
      android:fontFamily="@font/acme"
      android:hint="@string/etEmailHint"
      android:inputType="textEmailAddress"
      android:minHeight="52dp"
      android:paddingHorizontal="16dp"
      android:paddingVertical="10dp"
      android:textColor="@color/textPrimary"
      android:textColorHint="@color/textSecondary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

  <Button
      android:id="@+id/btRegister"
      android:layout_width="312dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:backgroundTint="@color/primaryBrown"
      android:fontFamily="@font/acme"
      android:minHeight="52dp"
      android:text="@string/btRegister"
      android:textSize="16sp"
      app:cornerRadius="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
      tools:ignore="VisualLintButtonSize" />

  <TextView
      android:id="@+id/tvEmail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="40dp"
      android:fontFamily="@font/acme"
      android:text="@string/etEmail"
      android:textColor="@color/textSecondary"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtLoginSub4" />

  <TextView
      android:id="@+id/tvFullName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/acme"
      android:text="@string/etFullName"
      android:textColor="@color/textSecondary"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etEmail" />

  <TextView
      android:id="@+id/tvPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/acme"
      android:text="@string/etPassword"
      android:textColor="@color/textSecondary"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etFullName" />

  <TextView
      android:id="@+id/tvConfirmPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/acme"
      android:text="@string/etConfirmPassword"
      android:textColor="@color/textSecondary"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etPassword" />

  <TextView
      android:id="@+id/txtHome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="25dp"
      android:fontFamily="@font/aclonica"
      android:text="@string/registration_title"
      android:textColor="@color/textPrimary"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
