<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProfileFragment">

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/etPasswordHint"
        android:inputType="textPassword"
        android:minHeight="52dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/etConfirmPasswordHint"
        android:inputType="textPassword"
        android:minHeight="52dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"/>

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="full name"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/etFullNameHint"
        android:inputType="text"
        android:minHeight="52dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullName"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/etEmailHint"
        android:inputType="textEmailAddress"
        android:minHeight="52dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textSecondary"/>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/primaryBrown"
        android:fontFamily="@font/acme"
        android:text="@string/btRegister"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        android:minHeight="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/acme"
        android:text="@string/etEmail"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textSecondary"/>

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/acme"
        android:text="@string/etFullName"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/acme"
        android:text="@string/etPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

    <TextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/acme"
        android:text="@string/etConfirmPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/txtHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/registration_title"
        android:textColor="@color/textPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
